gemini-2.5-flash-lite-qwen3/force-app/main/default/objects/PurchaseOrderLineItem__c/PurchaseOrderLineItem__c.object-meta.xml
<CustomObject>
    <label>Purchase Order Line Item</label>
    <nameField>
        <label>Purchase Order Line Item Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Purchase Order Line Items</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>