gemini-2.5-flash-lite-qwen3/force-app/main/default/objects/PurchaseOrderLineItem__c/fields/Ingredient__c.field-meta.xml
<CustomField>
    <fullName>Ingredient__c</fullName>
    <label>Ingredient</label>
    <referenceTo>Ingredient__c</referenceTo>
    <relationshipLabel>Purchase Order Line Items</relationshipLabel>
    <relationshipName>PO_Line_Items_Ingredients</relationshipName>
    <type>Lookup</type>
</CustomField>