gemini-2.5-flash-lite-qwen3/force-app/main/default/objects/PurchaseOrderLineItem__c/fields/LineItemTotal__c.field-meta.xml
<CustomField>
    <fullName>LineItemTotal__c</fullName>
    <formula>QuantityOrdered__c * UnitCost__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Line Item Total</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>