gemini-2.5-flash-lite-qwen3/force-app/main/default/objects/PurchaseOrderLineItem__c/fields/QuantityOrdered__c.field-meta.xml
<CustomField>
    <fullName>QuantityOrdered__c</fullName>
    <label>Quantity Ordered</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>