gemini-2.5-flash-lite-qwen3/force-app/main/default/objects/PurchaseOrderLineItem__c/fields/QuantityReceived__c.field-meta.xml
<CustomField>
    <fullName>QuantityReceived__c</fullName>
    <label>Quantity Received</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>